--- a/index.html
+++ b/index.html
@@ -50,12 +50,8 @@
                 <div class="circle"></div>
             </div>
         </div>
-        <div class="time"></div>
-        <div class="user">
-            <div class="mouse">
-                <img src="assets/mouse.png" alt="mouse-img">
-            </div>
-            <div class="player"></div>
+        <div class="date-time">
+            <div class="time"></div>
         </div>
     </div>
 
@@ -111,13 +107,9 @@
     <section id="about">
         <div class="about-content">
             <div class="intro-section">
-                <h2>MK</h2>
-                <h3>Professional Coder</h3>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto voluptatem dolor nemo
-                    dignissimos accusamus, dolorem rerum nam suscipit quam dolore quisquam nostrum asperiores molestiae
-                    itaque earum fugit animi magni veniam? Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Amet, repellat expedita nam molestiae iusto ad blanditiis voluptatem fugit? Officia est quaerat
-                    maiores iusto possimus ullam debitis repellat, voluptas dolorum illo!</p>
+                <h2>Mani Kumpatla</h2>
+                <h3>Tech Enthusiast & Developer</h3>
+                <p> I am an aspiring web and software developer currently completing my Associate Degree at Middlesex College in New Jersey. I am preparing to transfer to Rutgers University to pursue a Bachelor's degree in Computer Science. With a solid foundation in Python, SQL, and mathematics, I have recently started focusing on web development, enhancing my skills in HTML, CSS, and JavaScript. I am passionate about technology and problem-solving, and I enjoy creating interactive and efficient solutions while continuously expanding my expertise.</p>
                 <div class="social-links">
 
                     <a href="https://github.com/manivardhan-k" class="contact-link" target="_blank"
@@ -272,9 +264,7 @@
             <div class="project-card-1">
                 <div class="project-content">
                     <h3>Portfolio Website</h3>
-                    <p>A responsive personal portfolio website developed during an 8-week workshop, featuring an about
-                        section, skills showcase, project gallery, and contact form. The site implements modern design
-                        principles with smooth scrolling navigation and interactive elements.</p>
+                    <p>An interactive website crafted with HTML, CSS, and JavaScript. It features smooth animations, dynamic transitions, and responsive elements that create an immersive experience. The design prioritizes user interaction and motion effects, making it visually appealing and intuitive.</p>
 
                     <div class="tech-stack">
                         <span>HTML</span>
@@ -283,7 +273,7 @@
                     </div>
 
                     <div class="project-links">
-                        <a href="https://www.google.com/" class="project-link" target="_blank"
+                        <a href="https://github.com/manivardhan-k/Portfolio" class="project-link" target="_blank"
                             rel="noopener noreferrer">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none" stroke="currentColor" stroke-width="2">
@@ -310,19 +300,15 @@
                 </div>
 
                 <div class="project-content">
-                    <h3>My Portfolio</h3>
-                    <p>A responsive personal portfolio website developed during an 8-week workshop, featuring an about
-                        section, skills showcase, project gallery, and contact form. The site implements modern design
-                        principles with smooth scrolling navigation and interactive elements.</p>
+                    <h3> Amazon Product Analyzer</h3>
+                    <p>A web app built with Streamlit scrapes Amazon product data, applies a custom ranking algorithm, and lets users sort results and analyze price distributions. Seamlessly opening selected products on Amazon enhances the shopping experience. This project showcases expertise in web scraping, data processing, and algorithm development.</p>
 
                     <div class="tech-stack">
-                        <span>HTML</span>
-                        <span>JavaScript</span>
-                        <span>CSS</span>
+                        <span>Python</span>
                     </div>
 
                     <div class="project-links">
-                        <a href="https://www.google.com/" class="project-link" target="_blank"
+                        <a href="https://github.com/manivardhan-k/AmzWebScraping" class="project-link" target="_blank"
                             rel="noopener noreferrer">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none" stroke="currentColor" stroke-width="2">
@@ -340,34 +326,6 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <!-- <section id="contact">
-        <div class="contact-content">
-            <h2>Contact Me</h2>
-            <form class="contact-form" action="https://api.web3forms.com/submit" method="POST">
-                <input type="hidden" name="access_key" value="286c1358-928c-4686-a46c-fd61f78070f0">
-
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea id="message" name="message" rows="5" required></textarea>
-                </div>
-
-                <button type="submit">Send Message</button>
-            </form>
-        </div>
-
-    </section> -->
-
 
     <div class="cursor">
         <div class="cursor-dot"></div>
@@ -377,6 +335,7 @@
 
     <script src="app.js"></script>
     <script src="script.js"></script>
+    <script src="script2.js"></script>
     <script src="particles.js"></script>
     <script src="cursor.js"></script>
     <script src="running.js"></script>
