--- a/index.html
+++ b/index.html
@@ -300,8 +300,8 @@
                 </div>
 
                 <div class="project-content">
-                    <h3> Amazon Product Analyzer</h3>
-                    <p>A web app built with Streamlit which scrapes Amazon product data, applies a custom ranking algorithm, and lets users sort results and analyze price distributions. It enables the user to seamlessly open selected products on Amazon enhancing the shopping experience. </p>
+                    <h3>Amazon Product Analyzer</h3>
+                    <p>A web app built with Streamlit, which scrapes Amazon product data, applies a custom ranking algorithm, and lets users sort results and analyze price distributions. It enables the user to open selected products on Amazon, enhancing the shopping experience seamlessly. </p>
 
                     <div class="tech-stack">
                         <span>Python</span>
