--- a/index.html
+++ b/index.html
@@ -221,6 +221,14 @@
                 <div class="skill-category" id="tools">
                     <h4>Tools & Practices</h4>
                     <div class="skill-items">
+                        <span class="skill-tag">Git
+                            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="auto" height="25"
+                                viewBox="0 0 50 50">
+                                <path
+                                    d="M 46.792969 22.089844 L 27.910156 3.207031 C 27.109375 2.402344 26.054688 2 25 2 C 23.945313 2 22.890625 2.402344 22.089844 3.207031 L 18.355469 6.941406 L 22.976563 11.5625 C 24.511719 10.660156 26.511719 10.855469 27.828125 12.171875 C 29.144531 13.488281 29.335938 15.488281 28.433594 17.019531 L 32.976563 21.5625 C 34.511719 20.660156 36.511719 20.855469 37.828125 22.171875 C 39.390625 23.734375 39.390625 26.265625 37.828125 27.828125 C 36.265625 29.390625 33.734375 29.390625 32.171875 27.828125 C 30.855469 26.511719 30.660156 24.511719 31.5625 22.976563 L 27.019531 18.433594 C 26.695313 18.625 26.355469 18.765625 26 18.855469 L 26 31.140625 C 27.722656 31.585938 29 33.136719 29 35 C 29 37.210938 27.210938 39 25 39 C 22.789063 39 21 37.210938 21 35 C 21 33.136719 22.277344 31.585938 24 31.140625 L 24 18.855469 C 23.332031 18.683594 22.695313 18.351563 22.171875 17.828125 C 20.855469 16.511719 20.664063 14.511719 21.566406 12.980469 L 16.941406 8.355469 L 3.207031 22.089844 C 1.597656 23.695313 1.597656 26.304688 3.207031 27.910156 L 22.089844 46.792969 C 22.890625 47.597656 23.945313 48 25 48 C 26.054688 48 27.109375 47.597656 27.910156 46.792969 L 46.792969 27.910156 C 48.402344 26.304688 48.402344 23.695313 46.792969 22.089844 Z">
+                                </path>
+                            </svg>
+                        </span>
                         <span class="skill-tag">GitHub
                             <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="auto" height="25"
                                 viewBox="0 0 30 30">
@@ -279,7 +287,7 @@
                 </div>
                 
                 <div class="project-image">
-                    <img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/background/forest.jpg"
+                    <img src="assets/portfolio_img.png"
                         alt="My Portfolio"> <!--insert a pic for this project-->
                 </div>
             </div>
@@ -287,13 +295,13 @@
             <!-- Project 2 -->
             <div class="project-card-2">
                 <div class="project-image">
-                    <img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/background/forest.jpg"
+                    <img src="assets/amazonWeb_img.png"
                         alt="My Portfolio"> <!--insert a pic for this project-->
                 </div>
 
                 <div class="project-content">
-                    <h3>Amazon Product Analyzer</h3>
-                    <p>A web app built with Streamlit, which scrapes Amazon product data, applies a custom ranking algorithm, and lets users sort results and analyze price distributions. It enables the user to open selected products on Amazon, enhancing the shopping experience seamlessly. </p>
+                    <h3> Amazon Product Analyzer</h3>
+                    <p>A web app built with Streamlit scrapes Amazon product data, applies a custom ranking algorithm, and lets users sort results and analyze price distributions. Seamlessly opening selected products on Amazon enhances the shopping experience. This project showcases expertise in web scraping, data processing, and algorithm development.</p>
 
                     <div class="tech-stack">
                         <span>Python</span>
@@ -327,10 +335,8 @@
 
     <script src="app.js"></script>
     <script src="script.js"></script>
-    <script src="script2.js"></script>
     <script src="particles.js"></script>
     <script src="cursor.js"></script>
-    <script src="running.js"></script>
     <script src="contact.js"></script>
     <script src="eyes.js"></script>
 
