--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
                 <div class="project-content">
                     <h3> Amazon Product Analyzer</h3>
-                    <p>A web app built with Streamlit scrapes Amazon product data, applies a custom ranking algorithm, and lets users sort results and analyze price distributions. Seamlessly opening selected products on Amazon enhances the shopping experience. This project showcases expertise in web scraping, data processing, and algorithm development.</p>
+                    <p>A web app built with Streamlit, which scrapes Amazon product data, applies a custom ranking algorithm, and lets users sort results and analyze price distributions. It enables the user to open selected products on Amazon, enhancing the shopping experience seamlessly. </p>
 
                     <div class="tech-stack">
                         <span>Python</span>
@@ -335,8 +335,10 @@
 
     <script src="app.js"></script>
     <script src="script.js"></script>
+    <script src="script2.js"></script>
     <script src="particles.js"></script>
     <script src="cursor.js"></script>
+    <script src="running.js"></script>
     <script src="contact.js"></script>
     <script src="eyes.js"></script>
 
