--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <section id="about">
         <div class="about-content">
             <div class="intro-section">
-                <h2>Mani Kumpatla</h2>
+                <h2>Mani Vardhan Kumpatla</h2>
                 <h3>Tech Enthusiast & Developer</h3>
                 <p> I am an aspiring web and software developer currently completing my Associate Degree at Middlesex College in New Jersey. I am preparing to transfer to Rutgers University to pursue a Bachelor's degree in Computer Science. With a solid foundation in Python, SQL, and mathematics, I have recently started focusing on web development, enhancing my skills in HTML, CSS, and JavaScript. I am passionate about technology and problem-solving, and I enjoy creating interactive and efficient solutions while continuously expanding my expertise.</p>
                 <div class="social-links">
