Updated the certificates - added pictures and links

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             <div class="certificate-card-1">
 
                 <div class="certificate-image">
-                    <img src="assets/portfolio_img.png"
+                    <img src="assets/IBM_DataScience.png"
                         alt="My Portfolio">
                 </div>
 
@@ -373,7 +373,7 @@
                     </div> -->
 
                     <div class="certificate-links">
-                        <a href="https://www.ibm.com/" class="certificate-link" target="_blank"
+                        <a href="https://coursera.org/share/6a6c5347a9122dd98a9d47ab37d44623" class="certificate-link" target="_blank"
                             rel="noopener noreferrer">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none" stroke="currentColor" stroke-width="2">
@@ -392,12 +392,12 @@
             <div class="certificate-card-2">
 
                 <div class="certificate-image">
-                    <img src="assets/portfolio_img.png"
+                    <img src="assets/Google_Git.png"
                         alt="My Portfolio">
                 </div>
 
                 <div class="certificate-content">
-                    <h3>Google Git/Github</h3>
+                    <h3>Introduction to Git and GitHub</h3>
                     <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam placeat blanditiis esse reprehenderit, voluptatibus magnam amet quidem, sed numquam delectus cum perspiciatis culpa rem quod aperiam? Nobis, repudiandae. Quod, dignissimos!</p> -->
 
                     <!-- <div class="tech-stack">
@@ -407,7 +407,7 @@
                     </div> -->
 
                     <div class="certificate-links">
-                        <a href="https://www.google.com/" class="certificate-link" target="_blank"
+                        <a href="https://coursera.org/share/333d1652ce022c6db95731229b336061" class="certificate-link" target="_blank"
                             rel="noopener noreferrer">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none" stroke="currentColor" stroke-width="2">
