--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 <a href="#about">About</a>
                 <a href="#skills">Skills</a>
                 <a href="#projects">Projects</a>
+                <a href="#certifications">Certifications</a>
                 <div class="line"></div>
                 <div class="contact-btn">Contact</div>
                 <div class="active-indicator"></div>
