Updated about content

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
         <div class="about-content">
             <div class="intro-section">
                 <h2>Mani Vardhan Kumpatla</h2>
-                <h3>Tech Enthusiast & Developer</h3>
-                <p> I am an aspiring web and software developer currently completing my Associate Degree at Middlesex College in New Jersey. I am preparing to transfer to Rutgers University to pursue a Bachelor's degree in Computer Science. With a solid foundation in Python, SQL, and mathematics, I have recently started focusing on web development, enhancing my skills in HTML, CSS, and JavaScript. I am passionate about technology and problem-solving, and I enjoy creating interactive and efficient solutions while continuously expanding my expertise.</p>
+                <h3>AI/ML & Software Enthusiast</h3>
+                <p>Pursuing a B.S. in Computer Science at Rutgers University with a focus on AI/ML and software development. Strong foundation in Python, SQL, and Java with experience in web development (HTML, CSS, JavaScript) and data visualization (Tableau). Enjoy building interactive applications and completing data-driven projects, including web scraping tools and personal portfolio websites. IBM Data Science Certified and passionate about creating efficient, user-friendly solutions while continuously expanding technical expertise.</p>
                 <div class="social-links">
 
                     <a href="https://github.com/manivardhan-k" class="contact-link" target="_blank" rel="noopener noreferrer">
