Updated the skills section

--- a/index.html
+++ b/index.html
@@ -258,14 +258,29 @@
                                 </path>
                             </svg>
                         </span>
-                        <span class="skill-tag">VS Code
-                            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="auto" height="25"
-                                viewBox="0 0 24 24">
-                                <path
-                                    d="M22 6.2v11.57c0 .77-.44 1.47-1.13 1.8-.92.44-2.17 1.05-2.92 1.41.03-.16.05-.34.05-.51V3.53c0-.22-.03-.4-.06-.52.81.38 2.03.97 2.92 1.39C21.56 4.73 22 5.43 22 6.2zM3.91 13.34c.76.7 1.62 1.48 2.51 2.28-.54.41-1.02.78-1.41 1.07-.59.44-1.4.43-1.98-.04-.39-.32-.59-.79-.59-1.25 0-.44.17-.87.52-1.19C3.24 13.95 3.56 13.66 3.91 13.34zM16 3.53v4.81c0 0-1.36 1.03-3.16 2.4-1.08-.81-2.22-1.68-3.29-2.5 2.34-2.13 4.54-4.14 5.58-5.1.23-.22.56-.16.74.04.05.06.09.13.11.22C15.99 3.44 16 3.48 16 3.53zM16 20.47v-4.81c0 0-8.106-6.162-10.989-8.345-.59-.447-1.404-.43-1.979.036l0 0c-.766.621-.798 1.778-.067 2.44 3.01 2.728 10.034 9.098 12.166 11.069C15.462 21.167 16 20.93 16 20.47z">
+
+                        <span class="skill-tag">Git
+                            <svg xmlns="http://www.w3.org/2000/svg" width="auto" height="25" viewBox="0 0 92 92">
+                                <path d="M90.156 41.965 50.036 1.848a5.918 5.918 0 0 0-8.372 0l-8.328 8.332 10.566 10.566a7.03 7.03 0 0 1 7.23 1.684 7.034 7.034 0 0 1 1.669 7.277l10.187 10.184a7.028 7.028 0 0 1 7.278 1.672 7.04 7.04 0 0 1 0 9.957 7.05 7.05 0 0 1-9.965 0 7.044 7.044 0 0 1-1.528-7.66l-9.5-9.497V59.36a7.04 7.04 0 0 1 1.86 11.29 7.04 7.04 0 0 1-9.957 0 7.04 7.04 0 0 1 0-9.958 7.06 7.06 0 0 1 2.304-1.539V33.926a7.049 7.049 0 0 1-3.82-9.234L29.242 14.272 1.73 41.777a5.925 5.925 0 0 0 0 8.371L41.852 90.27a5.925 5.925 0 0 0 8.37 0l39.934-39.934a5.925 5.925 0 0 0 0-8.371" 
+                                    style="fill:currentColor;stroke:none;fill-rule:nonzero">
                                 </path>
                             </svg>
                         </span>
+
+                        <span class="skill-tag">Tableau
+                            <svg xmlns="http://www.w3.org/2000/svg" width="auto" height="25" viewBox="0 0 512 512" fill="currentColor">
+                                <path d="M242.69,340.3h26.62V267.7h67V241.88h-67v-72.6H242.69v72.6H176.54V267.7h66.15Z"/>
+                                <path d="M119.26,445.18h22.59V380.64h59.7V360.47h-59.7V295.13H119.26v65.34H59.56v20.17h59.7Z"/>
+                                <path d="M370.15,212h22.59V147.5h60.5V128.13h-60.5V62.79H370.15v65.34h-59.7V147.5h59.7Z"/>
+                                <path d="M246.72,496h19.36V450h41.15V433.08H266.08v-46H246.72v46H206.39V450h40.33Z"/>
+                                <path d="M120.07,212h21V146.69h60.51V128.13H141V62.79h-21v65.34H59.56v18.56h60.51Z"/>
+                                <path d="M435.72,308.84h19.36V263.66H496V245.92H455.08V200.74H435.72v45.18H395.39v17.74h40.33Z"/>
+                                <path fill-rule="evenodd" d="M370.15,445.18h22.59V380.64h60.5V360.47h-60.5V295.13H370.15v65.34h-59.7v20.17h59.7Z"/>
+                                <path d="M307,74.08V60.37H266.66V16H252.14V60.37H211.81V74.08h40.33v44.37h14.52V74.08ZM56.11,305.61H70.63V261.24H111V247.53H70.63V204H56.11v43.56H16v14.52L56.11,262Z"/>
+                            </svg>
+                            
+                        </span>
+
                     </div>
                 </div>
 
