--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         Portfolio
     </title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -461,3 +461,6 @@
 </body>
 
 </html>
+
+
+<!-- lite-server -->
