--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
             <h2>My Certifications</h2>
         </div>
 
-        <div class="certificate-container">
+        <div class="certificate-container" id="carousel">
 
             <!-- Certificate 1 -->
             <div class="certificate-card-1">
@@ -437,7 +437,6 @@
                 </div>
                 
             </div>
-
 
         </div>
 
