Updated project images

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                 </div>
                 
                 <div class="project-image">
-                    <img src="assets/rentalEstimator.png"
+                    <img src="assets/rental_estimator.png"
                         alt="My Portfolio">
                 </div>
             </div>
